--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.12",
+        "laravel/dusk": "^7.0",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.15",
         "mockery/mockery": "^1.4.4",
@@ -46,7 +47,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "sniff": [
+            "./vendor/bin/php-cs-fixer fix -vvv --dry-run --show-progress=dots"
+       ],
+       "lint": [
+           "./vendor/bin/php-cs-fixer fix -vvv --show-progress=dots"
+       ]
     },
     "extra": {
         "laravel": {
